# neat

./: CMakeLists.txt  README.md
neat/include/: Connection.hpp  Network.hpp  Node.hpp  NodeFunction.hpp  NodeType.hpp
neat/include/neat/: Network.hpp
neat/src/: Connection.cpp  Network.cpp  Node.cpp
